--- a/reverse-proxy.service
+++ b/reverse-proxy.service
@@ -8,12 +8,14 @@ StartLimitBurst=1
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/serveo -private_key_path=/etc/ssh/ssh_serveo_rsa_key -port=2222 -domain=localhost
+User=root
+Group=root
+ExecStart=/usr/local/bin/sish-lb -sish.domain="gorepl.com" -sish.configdir=/opt/sish-lb -sish.idletimeout=900 -sish.logtoclient -sish.forcerandomsubdomain=false -sish.lbenabled -sish.logenabled -sish.addr=:2222 -sish.http=:80 -sish.auth -sish.password="" -sish.pkpass=""
 Restart=always
 # Wait for 1 second before going for next start on failure case
 RestartSec=1
-CapabilityBoundingSet=CAP_NET_BIND_SERVICE
-AmbientCapabilities=CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE CAP_SYS_PTRACE CAP_SYS_ADMIN CAP_SETUID CAP_SETGID
+AmbientCapabilities=CAP_NET_BIND_SERVICE CAP_SYS_PTRACE CAP_SYS_ADMIN CAP_SETUID CAP_SETGID
 NoNewPrivileges=true
 [Install]
 WantedBy=multi-user.target
